--- a/static/index.html
+++ b/static/index.html
@@ -149,12 +149,16 @@ limitations under the License.
     </script>
   </amp-state>
   <!-- Available shirts. Maps unique string identifier to color and image URL string. -->
-  <amp-state id="shirts">
+  <amp-state id="shirts" [src]="'/shirts/sizesAndPrices?sku=' + selected.sku">
     <script type="application/json">
       {
         "1001": {
           "color": "black",
-          "image": "./shirts/black.jpg"
+          "image": "./shirts/black.jpg",
+          "sizes": {
+            "XS": 8.99,
+            "S": 9.99
+          }
         },
         "1002": {
           "color": "blue",
@@ -241,33 +245,38 @@ limitations under the License.
 
       <div class="options price">
         <h6>PRICE :
-          <!-- TODO: "Variable shirt prices" -->
-          $9.99
+          <!-- Display the price of the selected shirt in the selected size if available.
+               Otherwise, display the placeholder text '---'. -->
+          <span [text]="shirts[selected.sku].sizes[selectedSize] || '---'">---</span>
         </h6>
       </div>
 
       <div class="options sizes">
         <h6>SIZE :</h6>
 
-        <!-- TODO: "Variable shirt prices" -->
-        <amp-selector name="size">
+        <amp-selector name="size" on="select:AMP.setState({selectedSize: event.targetOption})">
           <table>
             <tr>
-              <!-- TODO: "Fetching available sizes for a shirt" -->
-              <td>
+              <!-- If 'XS' size is available for selected SKU, return empty string.
+                   Otherwise, return 'unavailable'. -->
+              <td [class]="shirts[selected.sku].sizes['XS'] ? '' : 'unavailable'">
                 <div option="XS">XS</div>
               </td>
-              <td>
+              <td [class]="shirts[selected.sku].sizes['S'] ? '' : 'unavailable'">
                 <div option="S">S</div>
               </td>
-              <!-- TODO: "Fetching available sizes for a shirt" -->
-              <td>
+              <!-- Add the ‘unavailable' class to the next three <td> elements
+                   to be consistent with the available sizes of the default SKU. -->
+              <td class="unavailable"
+                  [class]="shirts[selected.sku].sizes['M'] ? '' : 'unavailable'">
                 <div option="M">M</div>
               </td>
-              <td>
+              <td class="unavailable"
+                  [class]="shirts[selected.sku].sizes['L'] ? '' : 'unavailable'">
                 <div option="L">L</div>
               </td>
-              <td>
+              <td class="unavailable"
+                  [class]="shirts[selected.sku].sizes['XL'] ? '' : 'unavailable'">
                 <div option="XL">XL</div>
               </td>
             </tr>
@@ -285,9 +294,13 @@ limitations under the License.
       </div>
 
       <div class="options purchase">
-        <!-- TODO: "Conditionally enabled button" -->
-        <input type="submit" value="ADD TO CART"
-            class="mdl-button mdl-button--raised mdl-button--accent">
+        <!-- Disable the "ADD TO CART" button when:
+         1. There is no selected size, OR
+         2. The available sizes for the selected SKU haven't been fetched yet
+        -->
+        <input type="submit" value="ADD TO CART" disabled
+               class="mdl-button mdl-button--raised mdl-button--accent"
+               [disabled]="!selectedSize || !shirts[selected.sku].sizes[selectedSize]">
       </div>
 
       <div submit-success>
